--- a/Views/Productos/Index.cshtml
+++ b/Views/Productos/Index.cshtml
@@ -126,9 +126,9 @@
             </div>
         </form>
 
-        <button type="button" class="btn btn-primary mb-3"data-bs-target="#exampleModal">
-            Agregar Producto
-        </button>
+        <a class="btn btn-primary mb-3" asp-action="AgregarProducto">
+           Agregar Producto          
+        </a>
         <div class="card">
             <div class="card-header">
                 <h3>Lista de Productos</h3>
