--- a/Views/Productos/AgregarProducto.cshtml
+++ b/Views/Productos/AgregarProducto.cshtml
@@ -9,12 +9,11 @@
         background-color: #ADBC9F;
     }
         .modal-header {
-        background-color: #f8f9fa; /* Color de fondo del encabezado */
-        border-bottom: 1px solid #dee2e6; /* Límite inferior */
-    }
+        background-color: #f8f9fa; 
+        border-bottom: 1px solid #dee2e6; 
 
     .modal-footer {
-        background-color: #f8f9fa; /* Color de fondo del pie */
+        background-color: #f8f9fa; 
     }
 </style>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -22,8 +21,22 @@
 
 <div class="container mt-5">
     <h2>Registrar Producto</h2>
+    @if (!ViewData.ModelState.IsValid)
+    {
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <strong>Ocurrió un error:</strong>
+            <ul>
+                @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
+                {
+                    <li>@error.ErrorMessage</li>
+                }
+            </ul>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    }
+    <!-- Formulario para registro de productos-->
     <form method="post" class="row g-3" asp-action="AgregarProducto" enctype="multipart/form-data">
-        <!-- Otros campos del formulario -->
+        
         <div class="col-md-6">
             <label for="ImagenUrl" class="form-label">URL de la Imagen</label>
             <input type="text" class="form-control" asp-for="ImagenUrl" id="ImagenUrl" name="ImagenUrl" required>
@@ -65,6 +78,7 @@
                 </button>
             </div>
         </div>
+       
 
 
             <!-- Modal para seleccionar beneficios -->
@@ -123,7 +137,7 @@
             </div>
         </div>
         <div class="col-md-12">
-            <label for="FechaRegistro" class="form-label">Fecha de Registro</label>
+            <label for="FechaRegistro" class="form-label">Fecha de Ingreso</label>
             <input type="datetime-local" asp-for="FechaRegistro" class="form-control" id="FechaRegistro" name="FechaRegistro">
         </div>
         <div class="col-12">
@@ -153,6 +167,7 @@
     </div>
 </div>
 
+
 <!-- Modal para nuevo beneficio -->
 <div class="modal fade" id="nuevoBeneficioModal" tabindex="-1" aria-labelledby="nuevoBeneficioModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -176,7 +191,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+<!-- Scripts para funcionalidades dentro de la web  y vista-->
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         const searchInput = document.getElementById('search');
