Manuel: documentacion de AccountController, arreglo de errores y editar producto

--- a/Views/Productos/Index.cshtml
+++ b/Views/Productos/Index.cshtml
@@ -163,7 +163,7 @@
                                     <td>@productos.Activo</td>
                                     <td>@productos.FechaRegistro</td>
                                     <td>
-                                        <button type="button" class="btn btn-sm btn-primary"><a style="color:white" asp-action="Edit" asp-route-id="@productos.IdProducto"><i class="bi bi-pencil"></i></a></button> |
+                                        <button type="button" class="btn btn-sm btn-primary"><a style="color:white" asp-action="ModificarProducto" asp-route-id="@productos.IdProducto"><i class="bi bi-pencil"></i></a></button> |
                                         <button type="button" class="btn btn-sm btn-danger"><a style="color:white" asp-action="Delete" asp-route-id="@productos.IdProducto"><i class="bi bi-trash-fill"></i></a></button>
                                     </td>
                                 </tr>
