--- a/Views/Productos/ModificarProducto.cshtml
+++ b/Views/Productos/ModificarProducto.cshtml
@@ -1,6 +1,6 @@
 ﻿@model WEBAPP_NATURPIURA.ViewModels.ProductoRegistro
 @{
-    ViewData["Title"] = "Registrar Producto";
+    ViewData["Title"] = "Modificar Producto";
     var listaBeneficios = ViewBag.listaBeneficios as IEnumerable<dynamic>;
     var listaCategorias = ViewBag.listaCategorias as IEnumerable<dynamic>;
 }
@@ -21,21 +21,21 @@
         }
 
         input, textarea, select {
-            background-color: #FFFFFF; 
-            border: 4px solid #12372A; 
-            padding: 10px; 
-            font-size: 1.1em; 
-            box-shadow: 2px 2px 5px rgb(0,0,0, 0.3); 
-            margin-bottom: 10px; 
+            background-color: #FFFFFF;
+            border: 4px solid #12372A;
+            padding: 10px;
+            font-size: 1.1em;
+            box-shadow: 2px 2px 5px rgb(0,0,0, 0.3);
+            margin-bottom: 10px;
         }
 
             input:focus, textarea:focus, select:focus {
-                border-color: #007BFF; /* Color de borde al enfocar */
-                box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); /* Sombra al enfocar */
+                border-color: #007BFF;
+                box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); 
             }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+   
 </head>
 <body>
     <div class="container mt-5">
@@ -54,7 +54,7 @@
             </div>
         }
         <!-- Formulario para registro de productos-->
-        <form method="post" class="row g-3" asp-action="AgregarProducto" enctype="multipart/form-data">
+        <form method="post" class="row g-3" asp-action="ModificarProducto" enctype="multipart/form-data">
             <div class="col-md-6">
                 <label for="ImagenUrl" class="form-label">URL de la Imagen</label>
                 <input type="text" class="form-control" asp-for="ImagenUrl" id="ImagenUrl" name="ImagenUrl" required>
@@ -130,11 +130,12 @@
             </div>
             <div class="col-md-6">
                 <label for="PrecioUnidadCompra" class="form-label">Precio Unidad Compra</label>
-                <input type="number" step="0.01" asp-for="PrecioUnidadCompra" class="form-control" id="PrecioUnidadCompra" name="PrecioUnidadCompra" required>
+                <input type="number" value="@ViewBag.PrecioUnidadVenta" step="0.01" asp-for="PrecioUnidadCompra" class="form-control" id="PrecioUnidadCompra" name="PrecioUnidadCompra" required>
+                
             </div>
             <div class="col-md-6">
                 <label for="PrecioUnidadVenta" class="form-label">Precio Unidad Venta</label>
-                <input type="number" step="0.01" asp-for="PrecioUnidadVenta" class="form-control" id="PrecioUnidadVenta" name="PrecioUnidadVenta" required>
+                <input type="number" value="@ViewBag.PrecioUnidadVenta" step="0.01" asp-for="PrecioUnidadVenta" class="form-control" id="PrecioUnidadVenta" name="PrecioUnidadVenta" required>
             </div>
             <div class="col-md-6">
                 <label for="Stock" class="form-label">Stock</label>
@@ -143,13 +144,13 @@
             <div class="col-md-6">
                 <label for="Activo" class="form-label">Activo</label>
                 <div class="form-check">
-                    <input type="checkbox" class="form-check-input" asp-for="Activo" id="Activo" name="Activo" checked="checked">
+                    <input type="checkbox" class="form-check-input" asp-for="Activo" id="Activo" name="Activo" >
                     <label class="form-check-label" for="Activo">Activo</label>
                 </div>
             </div>
             <div class="col-md-12">
                 <label for="FechaRegistro" class="form-label">Fecha de Ingreso</label>
-                <input type="datetime-local" asp-for="FechaRegistro" class="form-control" id="FechaRegistro" name="FechaRegistro">
+                <input type="datetime-local" asp-for="FechaRegistro" class="form-control" id="FechaRegistro" name="FechaRegistro" disabled>
             </div>
             <div class="col-md-6">
                 <label for="DocumentoReferencia" class="form-label">Documento de Referencia</label>
@@ -157,7 +158,7 @@
             </div>
             <div class="col-md-6">
                 <label for="Observaciones" class="form-label">Observaciones</label>
-                <textarea class="form-control" id="Observaciones" asp-for="Observaciones" name="Observaciones" maxlength="300"></textarea>
+                <textarea class="form-control" id="Observaciones" asp-for="Observaciones" name="Observaciones" maxlength="300" disabled></textarea>
             </div>
             <div class="col-12">
                 <button type="submit" class="btn btn-primary">Registrar</button>
@@ -221,7 +222,7 @@
         const select = $('#beneficios'); // Usar jQuery para el select
         const countDisplay = $('#beneficios-count');
 
-        
+
 
         // Evento para actualizar el contador de seleccionados
         select.on('change', function () {
