Manuel:Mejora de layout, y obtimizacion y separacion de responsabilidades Productos

--- a/Views/Productos/ModificarProducto.cshtml
+++ b/Views/Productos/ModificarProducto.cshtml
@@ -154,11 +154,11 @@
             </div>
             <div class="col-md-6">
                 <label for="DocumentoReferencia" class="form-label">Documento de Referencia</label>
-                <input type="text" class="form-control" asp-for="DocumentoReferencia" id="DocumentoReferencia" name="DocumentoReferencia">
+                <input type="text" class="form-control" asp-for="DocumentoReferencia" id="DocumentoReferencia" name="DocumentoReferencia" >
             </div>
             <div class="col-md-6">
                 <label for="Observaciones" class="form-label">Observaciones</label>
-                <textarea class="form-control" id="Observaciones" asp-for="Observaciones" name="Observaciones" maxlength="300" disabled></textarea>
+                <textarea class="form-control" id="Observaciones" asp-for="Observaciones" name="Observaciones" maxlength="300" ></textarea>
             </div>
             <div class="col-12">
                 <button type="submit" class="btn btn-primary">Registrar</button>
