--- a/Views/Productos/AgregarProducto.cshtml
+++ b/Views/Productos/AgregarProducto.cshtml
@@ -130,11 +130,11 @@
             </div>
             <div class="col-md-6">
                 <label for="PrecioUnidadCompra" class="form-label">Precio Unidad Compra</label>
-                <input type="number" step="0.01" asp-for="PrecioUnidadCompra" class="form-control" id="PrecioUnidadCompra" name="PrecioUnidadCompra" required>
+                <input type="number" step="0.01" asp-for="PrecioUnidadCompra" class="form-control" id="PrecioUnidadCompra" name="PrecioUnidadCompra" min="0" required>
             </div>
             <div class="col-md-6">
                 <label for="PrecioUnidadVenta" class="form-label">Precio Unidad Venta</label>
-                <input type="number" step="0.01" asp-for="PrecioUnidadVenta" class="form-control" id="PrecioUnidadVenta" name="PrecioUnidadVenta" required>
+                <input type="number" step="0.01" asp-for="PrecioUnidadVenta" class="form-control" id="PrecioUnidadVenta" name="PrecioUnidadVenta" min="0"required>
             </div>
             <div class="col-md-6">
                 <label for="Stock" class="form-label">Stock</label>
